expand on how great the MO(1) –> MO map is

--- a/mo.tex
+++ b/mo.tex
@@ -692,7 +692,7 @@ and we also have the equivalence induced by the topological map in \Cref{RPnThom
 We will use them both in turn.
 
 \begin{corollary}[{\cite[Section I.3]{AdamsBlueBook}, \cite[Proposition 6.2]{HopkinsCOCTALOS}}]\label{HF2MOisFree}
-There is an isomorphism \[\HFtwo P_0(MO) \cong \frac{\Sym \HFtwo P_0 MO(1)}{b'_0 = 1}.\]
+There again an isomorphism \[\HFtwo P_0(MO) \cong \frac{\Sym \HFtwo P_0 MO(1)}{b'_0 = 1}\] of Hopf algebras and of comodules for the dual Steenrod algebra.
 \end{corollary}
 \begin{proof}
 The block sum maps \[BO(n) \times BO(m) \to BO(n+m)\] Thomify to give compatible maps \[MO(n) \sm MO(m) \to MO(n+m).\]  Taking the colimit, this gives a ring structure on $MO$ compatible with that on $\Susp^\infty_+ BO$ and compatible with the Thom isomorphism.
