fix bizarre error: new page + very long theorem optional argument + label immediately following \begin{theorem}[…] causes a bad call to \prevdepth

--- a/finite.tex
+++ b/finite.tex
@@ -868,8 +868,9 @@ Having accomplished all our major goals, we close our algebraic analysis of $\mo
 \section{Nilpotence and periodicity in finite spectra}\label{NilpotenceAndPeriodicity}
 
 With our analysis of $\moduli{fg}$ complete, our first goal in this Lecture is to finish the program sketched in the introduction to this Case Study by manufacturing those interesting homology theories connected to the functor $\context{MU}(-)$.  We begin by rephrasing our main tool, \Cref{LandwebersStackyTheorem}, in terms of algebraic conditions.
-\begin{theorem}[{\cite[Corollary 2.7]{LandweberHomologicalComodules} and \cite[Theorem 21.4 and Proposition 21.5]{HopkinsCOCTALOS}, cf.\ \Cref{LandwebersStackyTheorem}}]\label{LEFTRealTheoremWithProof}
+\begin{theorem}[{\cite[Corollary 2.7]{LandweberHomologicalComodules} and \cite[Theorem 21.4 and Proposition 21.5]{HopkinsCOCTALOS}}]
 Let $\sheaf F$ a \index{sheaf!quasicoherent}quasicoherent sheaf over $\moduli{fg} \times \Spec \Z_{(p)}$, thought of as a \index{comodule}comodule $M$ for the Kudo--Araki Hopf algebroid (cf.\ \Cref{KudoArakiIsomorphism}) \[(A, \Gamma) = (\sheaf O_{\moduli{fgl}^{\ptyp}}, \sheaf O_{\moduli{fgl}^{\ptyp}}[t_1, t_2, \ldots]).\]  If $(p, v_1, \ldots, v_d, \ldots)$ forms an infinite regular sequence on $M$, then \[X \mapsto M \otimes_{\sheaf O_{\moduli{fgl}^{\ptyp}}} MU_0(X)\] determines a homology theory on \emph{finite} spectra $X$.  Moreover, if $M/I_d = 0$ for some $d \gg 0$, then the same formula determines a homology theory on \emph{all} spectra $X$.
+\label{LEFTRealTheoremWithProof}
 \end{theorem}
 \begin{proof}
 Following the discussion in the introduction, we note that a cofiber sequence \[X' \to X \to X''\] of spectra gives rise to an exact sequence
