--- a/finite.tex
+++ b/finite.tex
@@ -518,7 +518,7 @@ This a quick induction: set $y = y_\infty$ and $x = y_2$, which satisfy \[y_\inf
 Let $x$ be a $p$--typical parameter for a formal group $\G$, and let $p^d-1$ be the minimal index so that the invariant differential is not integrable in that degree.  Then $\G$ has height $d$.  (In particular, the radius of convergence of the logarithmic differential equation is either $\infty$ or $p^d$ for some nonnegative natural $d$.)
 \end{corollary}
 \begin{proof}
-Take $x$ to be a $p$--typical parameter as in the statement.  Although \textit{a priori} the partial logarithm $\ell$ described in \Cref{HeightDefn} may not be the partial integral of the invariant differential associated to $x$, it is the partial logarithm associated to \emph{some} parameter $y$, and we use the preceding Lemma to re-express $y$ as \[y = \sumfgl{\G}_{n=0}^\infty \theta_{b_n}^* V_n^* x.\]  Consider the invariant differential associated to $y$, expressed in terms of $x$ and $dx$, using the rules described in the proof of \Cref{EveryFGLIsPTypical}: \[\omega_y = \sum_{j=0}^\infty \theta_{b_j}^* V_j^* \sum_{n=0}^\infty a_{p^n} x^{p^n-1} dx = \sum_{j=0}^\infty \sum_{n=0}^\infty j a_{p^n} b_j^{jp^n-1} x^{jp^n-1} dx.\]  Now consider the critical degree $p^d-1$: only terms of the form $b_{p^{d-n}}^{p^{d-n}p^n-1}$ can contribute, which we have all assumed to have positive $p$--adic valuation by virtue of the convergence of the partial logarithm for $y$, and hence they cannot modify the vanishing $p$--adic valuation of $a_{p^d}$.  In particular, this shows that the radius of convergence of the partial logarithm is at most $p^d-1$, and the existence of $x$ itself shows that it is at least $p^d-1$.
+Take $x$ to be a $p$--typical parameter as in the statement.  Although \textit{a priori} the partial logarithm $\ell$ described in \Cref{HeightDefn} may not be the partial integral of the invariant differential associated to $x$, it is the partial logarithm associated to \emph{some} parameter $y$, and we use the preceding Lemma to re-express $y$ as \[y = \sumfgl{\G}_{n=0}^\infty \theta_{b_n}^* V_n^* x.\]  Consider the invariant differential associated to $y$, expressed in terms of $x$ and $dx$, using the rules described in the proof of \Cref{EveryFGLIsPTypical}: \[\omega_y = \sum_{j=0}^\infty \theta_{b_j}^* V_j^* \sum_{n=0}^\infty a_{p^n} x^{p^n-1} dx = \sum_{j=0}^\infty \sum_{n=0}^\infty j a_{p^n} b_j^{jp^n-1} x^{jp^n-1} dx.\]  The terms in the critical degree $(p^d-1)$ take the form \[\sum_{n=0}^d p^{d-n} a_{p^n} b_{p^{d-n}}^{p^d-1} x^{p^d-1} dx.\]  The term $a_{p^n}$ is assumed to have $p$--adic valuation at least $n$ for $n < d$, and hence $p^{d-n}a_{p^n}$ has $p$--adic valuation at least $d$ for $n < d$.  Since in the case $n = d$ the coefficient $a_{p^d}$ has assumed to have $p$--adic valuation strictly less than $d$, this sum must also have $p$--adic valuation strictly less than $d$.  In particular, this shows that the radius of convergence of the partial logarithm is at most $p^d-1$, and the existence of $x$ itself shows that it is at least $p^d-1$.
 \end{proof}
 
 In the course of the above discussion, manipulations with the $\ell$--series have played a critical role, and we have shied away from the $p$--series because of the noninvertibility of $p$ in $\Z_{(p)}$.  As a consequence, this means that the $p$--series contains an unusual amount of information even after $p$--typification of a coordiante, and so we turn to its analysis.
