elaborate on some statements around the calculation of MO_*

--- a/mo.tex
+++ b/mo.tex
@@ -751,7 +751,7 @@ Recall, again, that $\InternalAut_1(\G_a)$ is defined by the (split) kernel sequ
 f_{\mathrm{typ}}(x) & = \sum_{k=0}^\infty b_{2^k-1} x^{2^k}, &
 f_{\mathrm{rest}}(x) & = \sum_{j \ne 2^k} b_{j-1} x^j.
 \end{align*}
-Because we assumed $b_0 = 1$ and $f_{\mathrm{typ}}$ is concentrated in power--of--$2$ degrees, it follows that $f_{\mathrm{typ}}$ gives a point $f_{\mathrm{typ}} \in \InternalAut_1(\G_a)(R)$.  We can use it to de-scale and get a new coordinate $g(x) = f_{\mathrm{typ}}^{-1}(f(x))$, which has an analogous decomposition into series $g_{\mathrm{typ}}(x)$ and $g_{\mathrm{rest}}(x)$.  Finally, note that $g_{\mathrm{typ}}(x) = x$ and that $f_{\mathrm{typ}}$ is the unique point in $\InternalAut_1(\G_a)(R)$ that has this property.
+Because we assumed $b_0 = 1$ and $f_{\mathrm{typ}}$ is concentrated in power--of--$2$ degrees, it follows that $f_{\mathrm{typ}}$ gives a point $f_{\mathrm{typ}} \in \InternalAut_1(\G_a)(R)$.  We can use it to de-scale and get a new coordinate $g(x) = f_{\mathrm{typ}}^{-1}(f(x))$, which has an analogous decomposition into series $g_{\mathrm{typ}}(x)$ and $g_{\mathrm{rest}}(x)$.  Finally, note that $g_{\mathrm{typ}}(x) = x$ and that $f_{\mathrm{typ}}$ is the unique point in $\InternalAut_1(\G_a)(R)$ that has this property.  Altogether, this shows that the map $f \mapsto (f_{\mathrm{typ}}, f_{\mathrm{rest}})$ is an isomorphism.
 \end{proof}
 
 \begin{corollary}[{\cite[Remark 12.3]{StricklandFGNotes}}]\label{CalculationOfPiStarMO}
@@ -764,7 +764,7 @@ Set $M = \F_2[b_j \mid j \ne 2^k - 1]$, and write $\mathcal AP_0'$ for the ring 
 & = \F_2 \cotensor_{\mathcal A_*} (\mathcal A_* \otimes_{\F_2} M) \\
 & = \F_2 \otimes_{\F_2} M = M.
 \end{align*}
-Since the Adams spectral sequence \[H^*_{\mathrm{gp}}(\InternalAut_1(\G_a); \HFtwo P_0(MO)) \Rightarrow \pi_* MO\] is concentrated on the $0$--line, it collapses.  Using the residual $\Gm$--action to infer the grading, we deduce \[\pi_* MO = \F_2[b_j \mid j \ne 2^k-1]. \qedhere\]
+Since the Adams spectral sequence \[H^*_{\mathrm{gp}}(\InternalAut_1(\G_a); \HFtwo P_0(MO)) \Rightarrow \pi_* MO\] is concentrated on the $0$--line, it collapses.  We can infer the grading from the residual $\Gm$--action: \[f_{\mathrm{rest}}(x) \mapsto \xi_0^{-1} f_{\mathrm{rest}}(\xi_0 x) = \sum_{j \ne 2^k} \xi_0^{j-1} b_{j-1} x^j.\]  We therefore deduce \[\pi_* MO = \F_2[b_j \mid j \ne 2^k-1]. \qedhere\]
 \end{proof}
 
 This is pretty remarkable: some statement about manifold geometry came down to understanding how we could reparametrize a certain formal group, itself a (fairly simple) purely algebraic problem.  The connection between these two problems seems fairly miraculous: we needed a small object, $\RP^\infty$, which controlled the whole story; we needed to be able to compute everything about it; and we needed various other ``generation'' or ``freeness'' results to work out in our favor.  It is not obvious that we will get this lucky twice, should we try to reapply these ideas to other cases.  Nevertheless, trying to push our luck as far as possible is the main thrust of the rest of the book.  We could close this section with this accomplishment, but there are two easy consequences of this calculation that are worth recording before we leave.
