--- a/mo.tex
+++ b/mo.tex
@@ -751,7 +751,7 @@ Recall, again, that $\InternalAut_1(\G_a)$ is defined by the (split) kernel sequ
 f_{\mathrm{typ}}(x) & = \sum_{k=0}^\infty b_{2^k-1} x^{2^k}, &
 f_{\mathrm{rest}}(x) & = \sum_{j \ne 2^k} b_{j-1} x^j.
 \end{align*}
-Because we assumed $b_0 = 1$ and $f_{\mathrm{typ}}$ is concentrated in power--of--$2$ degrees, it follows that $f_{\mathrm{typ}}$ gives a point $f_{\mathrm{typ}} \in \InternalAut_1(\G_a)(R)$.  We can use it to de-scale and get a new coordinate $g(x) = f_{\mathrm{typ}}^{-1}(f(x))$, which has an analogous decomposition into series $g_{\mathrm{typ}}(x)$ and $g_{\mathrm{rest}}(x)$.  Finally, note that $g_{\mathrm{typ}}(x) = x$ and that $f_{\mathrm{typ}}$ is the unique point in $\InternalAut_1(\G_a)(R)$ that has this property.  Altogether, this shows that the map $f \mapsto (f_{\mathrm{typ}}, f_{\mathrm{rest}})$ is an isomorphism.
+Because we assumed $b_0 = 1$ and $f_{\mathrm{typ}}$ is concentrated in power--of--$2$ degrees, it follows that $f_{\mathrm{typ}}$ gives a point $f_{\mathrm{typ}} \in \InternalAut_1(\G_a)(R)$.  We can use it to de-scale and get a new coordinate $g(x) = f_{\mathrm{typ}}^{-1}(f(x))$, which has an analogous decomposition into series $g_{\mathrm{typ}}(x)$ and $g_{\mathrm{rest}}(x)$.  Finally, note that $g_{\mathrm{typ}}(x) = x$ and that $f_{\mathrm{typ}}$ is the unique point in $\InternalAut_1(\G_a)(R)$ that has this property.  Altogether, this shows that the map $f \mapsto (f_{\mathrm{typ}}, g_{\mathrm{rest}})$ is an isomorphism.
 \end{proof}
 
 \begin{corollary}[{\cite[Remark 12.3]{StricklandFGNotes}}]\label{CalculationOfPiStarMO}
