clarify the tate vanishing example

--- a/quillen.tex
+++ b/quillen.tex
@@ -690,7 +690,14 @@ f \arrow[|->]{r} & P^G f \arrow[|->]{rr} & & P^G_{\Tate} f.
 \end{definition}
 
 \begin{example}
-The Tate spectrum is quite a destructive operation in the case of $G = C_p$.\footnote{In fact, its job in general is to be destructive, and the failure of this Example for other groups is a sign that we have chosen the ``wrong'' definition. For a general group $G$, the definition of ``Tate construction'' can be modified to kill all intermediate transfers, not just those which transfer up from the trivial subgroup---but this requires understanding \textit{families} of subgroups, which is more equivariant homotopy theory than we otherwise need.}  For example, take $X$ to be a trivial $C_p$--spectrum, and let $\bigvee_{C_p} X$ be the $C_p$--indexed wedge with the free action.  Because the norm map composed with the restriction map encodes multiplication by $p$, this forces the norm map itself to be an equivalence, and hence the cofiber seuqnece \[\left(\bigvee_{C_p} X \right)_{hC_p} \xrightarrow{\simeq} \left( \bigvee_{C_p} X \right)^{hC_p} \to \left( \bigvee_{C_p} X \right)^{tC_p}\] causes $(\bigvee_{C_p} X)^{tC_p}$ to be contractible.
+The Tate spectrum is quite a destructive operation in the case of $G = C_p$.\footnote{In fact, its job in general is to be destructive, and the failure of this Example for other groups is a sign that we have chosen the ``wrong'' definition. For a general group $G$, the definition of ``Tate construction'' can be modified to kill all intermediate transfers, not just those which transfer up from the trivial subgroup---but this requires understanding \textit{families} of subgroups, which is more equivariant homotopy theory than we otherwise need.}  For example, take $X$ to be a trivial $C_p$--spectrum, and let $\bigvee_{C_p} X$ be the $C_p$--indexed wedge with the free action.  The norm, transfer, and restriction maps belong to the following diagram:
+\begin{center}
+\begin{tikzcd}
+(X^{\vee C_p})_{hC_p} \arrow{r} & (X^{\vee C_p})^{hC_p} \arrow{r} & X^{\vee C_p} \arrow{r} & (X^{\vee C_p})_{hC_p} \\
+X \arrow[equals]{u} \arrow{r} & X \arrow[equals]{u} \arrow["\Delta"]{r} & X^{\vee C_p} \arrow[equals]{u} \arrow["\mu"]{r} & X \arrow[equals]{u},
+\end{tikzcd}
+\end{center}
+where on the bottom row we have identified the homotopy orbits and fixed points of the wedge.  We claim that the norm map is an equivalence.  This diagram is natural in $X$ and each node preserves cofiber sequences, so it suffices to check the claim the spheres $\S^n$.  Recalling that the long horizontal composite is multiplication by $|C_p| = p$, we have factored $p \in \pi_0 \End \S^n = \Z$ as some map followed by the diagonal and fold maps, which themselves compose to $p$.  This forces the norm map itself to be an equivalence, and hence the cofiber sequence \[(X^{\vee C_p})_{hC_p} \xrightarrow{\simeq} (X^{\vee C_p})^{hC_p} \to (X^{\vee C_p})^{tC_p}\] causes $(X^{\vee C_p})^{tC_p}$ to be contractible.
 \end{example}
 
 As another example of the destructiveness of the Tate operation, we have the following:
