remove extraneous derived functors from 3.2.5

--- a/finite.tex
+++ b/finite.tex
@@ -388,7 +388,7 @@ We now ground ourselves by fitting symmetric $2$--cocycles into a more general h
 \cdots
 \end{tikzcd}
 \right\}.\]
-By applying the functor $\InternalHom{FormalSchemes}(-, \G_a)(k)$, we get a cosimplicial abelian group stemming from the group scheme structure on $\G_a$, and this gives a cochain complex of which we can take the \index{formal group!cohomology}cohomology.  In the case $\G = \G_a$, the $2$--cocycles in this cochain complex are \emph{precisely} what we've been calling $2$--cocycles\footnote{They aren't obligated to be symmetric or of homogeneous degree, though.}, so we are interested in computing $H^2$.  First, we can quickly compute $B^2$, since $C^1$ is so small: \[d^1(x^k) = d_k c_k.\]  Secondly, one may think of this complex as a resolution computing various\footnote{Refer back to \Cref{ExtAndCotorAgree}.} derived functors \[\Cotor_{\sheaf O_{\G}}(k, k) \cong \Ext_{\sheaf O_{\G}}(k, k) \cong \Tor_{\sheaf O_{\G}^*}(k, k).\]  We are now going to compute these last groups using a more efficient complex.
+By applying the functor $\InternalHom{FormalSchemes}(-, \G_a)(k)$, we get a cosimplicial abelian group stemming from the group scheme structure on $\G_a$, and this gives a cochain complex of which we can take the \index{formal group!cohomology}cohomology.  In the case $\G = \G_a$, the $2$--cocycles in this cochain complex are \emph{precisely} what we've been calling $2$--cocycles\footnote{They aren't obligated to be symmetric or of homogeneous degree, though.}, so we are interested in computing $H^2$.  First, we can quickly compute $B^2$, since $C^1$ is so small: \[d^1(x^k) = d_k c_k.\]  Secondly, by sheer inspection one may think of this complex as a resolution computing the derived functor $\Tor_{\sheaf O_{\G}^*}(k, k)$.  We are now going to compute these last groups using a more efficient complex.
 
 \begin{description}
 \item[$\Q$:] There is a free $\Q[t]$--module resolution
