italics typesetting advice

--- a/main.tex
+++ b/main.tex
@@ -57,6 +57,7 @@
 \todo[inline]{Period after Theorem with citation, but not after Theorem without?}
 \todo[inline]{Use title case in chapter titles, possible also in section titles.}
 \todo[inline]{Use mathrm for differential d, exponential e, imaginary i.}
+\todo[inline]{Look at this inline-math-in-italics advice: https://tex.stackexchange.com/questions/3490/bad-spacing-of-math-letters-within-italic-text .}
 
 
 
