CUP guidelines: upright exponential e, differential d, imaginary i

--- a/powerops.tex
+++ b/powerops.tex
@@ -884,7 +884,7 @@ Now we move away from $MU$.  There are three directions for generalization: conn
 \item This same cofiber sequence and idempotent splitting also tells us that rational $KU$--cohomology classes in the image of $KO$--cohomology are $\chi$--invariant, i.e., they belong to the $-$ factor.
 \end{enumerate}
 
-Our main example is the usual orientation $MU \to KU$ that selects the formal group law $x + y - xy$.  This is associated to the difference Thom class $x / (e^x - 1) = x / \exp_{\G_m}(x)$.  To make this difference $[-1]$--invariant (and hence give a complex-orientation of $KO$), we use the averaged exponential class $(e^{x/2} - 1) - (e^{-x/2} - 1)$.\footnote{Incidentally, this is equal to $2\operatorname{sinh}(x/2)$.}  In turn, we use the Lemma to calculate the behavior on homotopy of the associated orientation:\footnote{This comes out of applying $d\log$ to the fraction.}\index{Bernoulli!number} \[\frac{x}{e^{x/2} - e^{-x/2}} = \exp\left(-\sum_{k=2}^\infty \frac{B_k}{k} \cdot \frac{x^k}{k!}\right).\]  Finally, we calculate the effect of the orientation on the second half of the factorization \[M\SU \to M\Spin \to KO,\] again using the relevant idempotent, which has the effect of halving the coefficients in the characteristic series: $-\frac{B_k}{2k}$.\footnote{While we're here, you might want to observe that elements in $[bu, \gl_1 R]$ push forward to elements in $[bu, \gl_1 \Q \otimes R]$ which do not disturb the denominators of the elements $t_k$.  (On the other hand, the ``Miller invariant'' associated to a rational ring spectrum is \emph{zero}, because arbitrary elements in $[bu, \gl_1 \Q \otimes R]$ can completely destroy the denominators.)}
+Our main example is the usual orientation $MU \to KU$ that selects the formal group law $x + y - xy$.  This is associated to the difference Thom class $x / (\mathrm{e}^x - 1) = x / \exp_{\G_m}(x)$.  To make this difference $[-1]$--invariant (and hence give a complex-orientation of $KO$), we use the averaged exponential class $(\mathrm{e}^{x/2} - 1) - (\mathrm{e}^{-x/2} - 1)$.\footnote{Incidentally, this is equal to $2\operatorname{sinh}(x/2)$.}  In turn, we use the Lemma to calculate the behavior on homotopy of the associated orientation:\footnote{This comes out of applying $\mathrm{d}\log$ to the fraction.}\index{Bernoulli!number} \[\frac{x}{\mathrm e^{x/2} - \mathrm e^{-x/2}} = \exp\left(-\sum_{k=2}^\infty \frac{B_k}{k} \cdot \frac{x^k}{k!}\right).\]  Finally, we calculate the effect of the orientation on the second half of the factorization \[M\SU \to M\Spin \to KO,\] again using the relevant idempotent, which has the effect of halving the coefficients in the characteristic series: $-\frac{B_k}{2k}$.\footnote{While we're here, you might want to observe that elements in $[bu, \gl_1 R]$ push forward to elements in $[bu, \gl_1 \Q \otimes R]$ which do not disturb the denominators of the elements $t_k$.  (On the other hand, the ``Miller invariant'' associated to a rational ring spectrum is \emph{zero}, because arbitrary elements in $[bu, \gl_1 \Q \otimes R]$ can completely destroy the denominators.)}
 
 This accounts for both $E_\infty(M\Spin, \Q \otimes KO)$ and $E_\infty(M\Spin, \Q \otimes KO_p)$: the set of rational characteristic series includes into the set of ad\`elic characteristic series as the subset with rational coefficients.
 
@@ -1100,10 +1100,10 @@ For any auxiliary $c \in \Z_p^\times$, there is a functional $f_c$ satisfying\fo
 
 \noindent This Theorem is stated in exactly the generality it was originally proven, and so you might wonder why Mazur had already proven \emph{exactly} what we needed.  To understand his program, recall these two facts about $\zeta$:
 \begin{enumerate}
-    \item Except for a real \index{zeta function@$\zeta$--function!Euler factor}Euler factor, $\zeta$ is basically the \index{Mellin transform}Mellin transform of the measure $\frac{dx}{e^x - 1}$ (i.e., its sequence of moments): \[\zeta(s) = \frac{1}{\Gamma(s)} \int_0^\infty x^{s-1} \frac{dx}{e^x - 1}.\]
-    \item For any $k \in \Z_{> 0}$, $\zeta(1 - k) = -B_k / k$, where $\frac{t}{e^t - 1} = \sum_{k=0}^\infty B_k \frac{t^k}{k!}$.
+    \item Except for a real \index{zeta function@$\zeta$--function!Euler factor}Euler factor, $\zeta$ is basically the \index{Mellin transform}Mellin transform of the measure $\frac{\dx}{\mathrm e^x - 1}$ (i.e., its sequence of moments): \[\zeta(s) = \frac{1}{\Gamma(s)} \int_0^\infty x^{s-1} \frac{\dx}{\mathrm e^x - 1}.\]
+    \item For any $k \in \Z_{> 0}$, $\zeta(1 - k) = -B_k / k$, where $\frac{t}{\mathrm e^t - 1} = \sum_{k=0}^\infty B_k \frac{t^k}{k!}$.
 \end{enumerate}
-Mazur's idea was to build a \index{zeta function@$\zeta$--function!p adic@$p$--adic} $p$--adic $\zeta$--function by investigating similar $p$--adic integrals, beginning with certain finitary approximations to this one.  To begin, a Bernoulli polynomial\index{Bernoulli!polynomial} for $k \in \Z_{>0}$ is \[\sum_{k=0}^\infty B_k(x) \frac{t^k}{k!} = \frac{t e^{tx}}{e^t - 1}.\]  These polynomials beget Bernoulli distributions\index{Bernoulli!distribution} according to the rule
+Mazur's idea was to build a \index{zeta function@$\zeta$--function!p adic@$p$--adic} $p$--adic $\zeta$--function by investigating similar $p$--adic integrals, beginning with certain finitary approximations to this one.  To begin, a Bernoulli polynomial\index{Bernoulli!polynomial} for $k \in \Z_{>0}$ is \[\sum_{k=0}^\infty B_k(x) \frac{t^k}{k!} = \frac{t \mathrm e^{tx}}{\mathrm e^t - 1}.\]  These polynomials beget Bernoulli distributions\index{Bernoulli!distribution} according to the rule
 \begin{align*}
 \Z/p^n\Z & \xrightarrow{E_k} \Q \subseteq \Q_p \\
 x \in [0, p^n) & \mapsto k^{-1} p^{n(k-1)} B_k(x p^{-n}).
