--- a/preamble.tex
+++ b/preamble.tex
@@ -227,6 +227,7 @@
 \newcommand{\tr}{\mathrm{tr}}
 \newcommand{\spin}{\mathit{spin}}
 \newcommand{\EinftyRings}{E_\infty\CatOf{RingSpectra}}
+\newcommand{\dx}{\operatorname{d\mathit{x}}}
 
 \DeclareMathOperator{\im}{im}
 \DeclareMathOperator{\Ind}{Ind}
