--- a/quillen.tex
+++ b/quillen.tex
@@ -74,11 +74,11 @@ We specialize an argument of Strickland~\cite[Proposition 2.94]{StricklandFSFG} 
 & \cong \CatOf{Modules}_R(A \otimes_R (R[\eps] / \eps^2)^*, T) \\
 & \cong \CatOf{Algebras}_{R/}(\Sym_R(A \otimes_R (R[\eps] / \eps^2)^*), T),
 \end{align*}
-we see that we can pick out the original mapping set by passing to a quotient of the domain.  After some thought, we arrive at the equation \[\InternalHom{Schemes}_{/S}(\Spec R[\eps] / \eps^2, X) = \Spec \frac{A\{1, da \mid a \in A\}}{\left( \begin{array}{c} \text{$dr = 0$ for $r \in R$}, \\ d(a_1 a_2) = da_1 \cdot a_2 + a_1 \cdot da_2 \end{array} \right)} .\]  To extract the scheme $T_x X$ from this, we construct the pullback \[T_x X := \InternalHom{Schemes}_S(\Spec R[\eps] / \eps^2, X) \times_X S,\] where the structure maps are given on the left by setting $\eps = 0$ and on the right using the point $x$.  Expanding the formulas again shows that the coordinate ring of this affine scheme is given by \[\sheaf O_{T_x X} = A / I^2 \cong R \oplus T^*_x X. \qedhere\]
+we see that we can pick out the original mapping set by passing to a quotient of the domain.  After some thought, we arrive at the equation \[\InternalHom{Schemes}_{/S}(\Spec R[\eps] / \eps^2, X) = \Spec \frac{A\{1, \operatorname{d\mathit{a}} \mid a \in A\}}{\left( \begin{array}{c} \text{$\operatorname{d\mathit{r}} = 0$ for $r \in R$}, \\ \operatorname{d}(a_1 a_2) = \operatorname{d\mathit{a}_1} \cdot a_2 + a_1 \cdot \operatorname{d\mathit{a}_2} \end{array} \right)} .\]  To extract the scheme $T_x X$ from this, we construct the pullback \[T_x X := \InternalHom{Schemes}_S(\Spec R[\eps] / \eps^2, X) \times_X S,\] where the structure maps are given on the left by setting $\eps = 0$ and on the right using the point $x$.  Expanding the formulas again shows that the coordinate ring of this affine scheme is given by \[\sheaf O_{T_x X} = A / I^2 \cong R \oplus T^*_x X. \qedhere\]
 \end{proof}
 
 \begin{definition}
-The ring of functions appearing in the proof above fits into an exact sequence \[0 \to \Omega_{A/R} \to \left. A\{1, da \mid a \in A\} \middle/ \left( \begin{array}{c} \text{$dr = 0$ for $r \in R$}, \\ d(a_1 a_2) = da_1 \cdot a_2 + a_1 \cdot da_2 \end{array} \right) \right. \to A\{1\} \to 0.\]  The kernel $\Omega_{A/R}$ is called the module of \index{Kahler differentials@K\"ahler differentials}\textit{K\"ahler differentials} (of $A$, relative to $R$).  The map $d\co A\to \Omega^1_{A/R}$ is the universal $R$--linear derivation into an $A$--module, i.e., \[\CatOf{Derivations}_R(A, M) = \CatOf{Modules}_A(\Omega^1_{A/R}, M).\]
+The ring of functions appearing in the proof above fits into an exact sequence \[0 \to \Omega_{A/R} \to \left. A\{1, \operatorname{d\mathit{a}} \mid a \in A\} \middle/ \left( \begin{array}{c} \text{$\operatorname{d\mathit{r}} = 0$ for $r \in R$}, \\ \operatorname{d}(a_1 a_2) = \operatorname{d\mathit{a}_1} \cdot a_2 + a_1 \cdot \operatorname{d\mathit{a}_2} \end{array} \right) \right. \to A\{1\} \to 0.\]  The kernel $\Omega_{A/R}$ is called the module of \index{Kahler differentials@K\"ahler differentials}\textit{K\"ahler differentials} (of $A$, relative to $R$).  The map $\operatorname d\co A\to \Omega^1_{A/R}$ is the universal $R$--linear derivation into an $A$--module, i.e., \[\CatOf{Derivations}_R(A, M) = \CatOf{Modules}_A(\Omega^1_{A/R}, M).\]
 \end{definition}
 
 The upshot of this calculation is that $\Spec A/I^2$ is a natural place to study the linear behavior of functions on $X$ near $x$.  We have also set the definitions up so that we can easily generalize to higher-order approximations:
@@ -209,7 +209,7 @@ x_1(t_1) +_{\Gm} x_2(t_2) & = 1 - (1 - t_1)(1 - t_2) \\
 \end{align*}
 \end{example}
 
-As an application of all these tools, we will show that the \emph{rational} theory of formal groups is highly degenerate: every rational formal group admits a \index{logarithm}\textit{logarithm}, i.e., an isomorphism to $\G_a$.  Suppose now that $R$ is a $\Q$--algebra and that $A = R\llbracket x \rrbracket$ is the coordinatized ring of functions on a formal line over $R$.  What's special about this rational curve case is that differentiation gives an isomorphism between the \index{Kahler differentials@K\"ahler differentials}K\"ahler differentials $\Omega^1_{A/R}$ and the ideal $(x)$ of functions vanishing at the origin (i.e., the ideal sheaf selecting the closed subscheme $0\co \Spec R \to \Spf A$).  Its inverse is formal integration: \[\int \co \left(\sum_{j=0}^\infty c_j x^j \right) dx \mapsto \sum_{j=0}^\infty \frac{c_j}{j+1} x^{j+1}.\]  In pursuit of the construction of a logarithm for a formal group $\G$ over $R$, we now take a cue from classical Lie theory:
+As an application of all these tools, we will show that the \emph{rational} theory of formal groups is highly degenerate: every rational formal group admits a \index{logarithm}\textit{logarithm}, i.e., an isomorphism to $\G_a$.  Suppose now that $R$ is a $\Q$--algebra and that $A = R\llbracket x \rrbracket$ is the coordinatized ring of functions on a formal line over $R$.  What's special about this rational curve case is that differentiation gives an isomorphism between the \index{Kahler differentials@K\"ahler differentials}K\"ahler differentials $\Omega^1_{A/R}$ and the ideal $(x)$ of functions vanishing at the origin (i.e., the ideal sheaf selecting the closed subscheme $0\co \Spec R \to \Spf A$).  Its inverse is formal integration: \[\int \co \left(\sum_{j=0}^\infty c_j x^j \right) \dx \mapsto \sum_{j=0}^\infty \frac{c_j}{j+1} x^{j+1}.\]  In pursuit of the construction of a logarithm for a formal group $\G$ over $R$, we now take a cue from classical Lie theory:
 \begin{definition}
 A $1$--form $\omega \in \Omega^1_{A/R}$ is said to be \index{Kahler differentials@K\"ahler differentials!invariant}\textit{invariant (under a group law $+_\phi$)} when $\omega = \tau_y^* \omega$ for all translations $\tau_y(x) = x +_\phi y$.  We write $\omega_{\G} \subseteq \Omega^1_{A/R}$ for the subsheaf of such invariant $1$--forms.
 \end{definition}
@@ -220,18 +220,18 @@ For $R$ a $\Q$--algebra, integration gives an isomorphism \[\int\co \omega_{\G} 
 \begin{proof}
 Suppose that $f \in \omega_{\G}$ is an invariant differential, which in terms of a coordinate $x$ indicates the equation
 \begin{align*}
-f(x) dx = \omega & = \tau_y^* \omega = f(x +_\phi y) d(x +_\phi y). \\
-\intertext{Writing $F(x) = \int f(x) dx$ for its formal integral, we use the multivariate chain rule to extend this equation to}
-\frac{\partial F(x)}{\partial x} dx = f(x) dx = \omega & = \tau_y^* \omega = f(x +_\phi y) d(x +_\phi y) = \frac{\partial F(x +_\phi y)}{\partial x} dx.
+f(x) \dx = \omega & = \tau_y^* \omega = f(x +_\phi y) \operatorname{d}(x +_\phi y). \\
+\intertext{Writing $F(x) = \int f(x) \dx$ for its formal integral, we use the multivariate chain rule to extend this equation to}
+\frac{\partial F(x)}{\partial x} \dx = f(x) \dx = \omega & = \tau_y^* \omega = f(x +_\phi y) \operatorname{d}(x +_\phi y) = \frac{\partial F(x +_\phi y)}{\partial x} \dx.
 \end{align*}
-It follows that $F(x +_\phi y)$ and $F(x)$ differ by a constant.  Checking at $x = 0$ shows that the constant is $F(y)$, hence \[F(x +_\phi y) = F(x) + F(y).\]  This chain of steps can be read in reverse: starting with an $F(x)$ satisfying this last equation, differentiating against $x$ yields the long equation above, and hence an invariant differential $\omega = \frac{\partial F(x)}{\partial x} dx$.
+It follows that $F(x +_\phi y)$ and $F(x)$ differ by a constant.  Checking at $x = 0$ shows that the constant is $F(y)$, hence \[F(x +_\phi y) = F(x) + F(y).\]  This chain of steps can be read in reverse: starting with an $F(x)$ satisfying this last equation, differentiating against $x$ yields the long equation above, and hence an invariant differential $\omega = \frac{\partial F(x)}{\partial x} \dx$.
 \end{proof}
 
 \begin{lemma}\label{InvDifflsAreDeterminedByConstantTerm}
 For $R$ any ring, there is an isomorphism $\omega_{\G} \cong T_0^* \G$.
 \end{lemma}
 \begin{proof}
-We set out to analyze the space of invariant differentials in terms of a coordinate $x$.  As above, a differential $\omega$ admits expression as $\omega = f(x) dx$, and the invariance condition above becomes \[f(x) dx = f(y +_\phi x) d(y +_\phi x) = f(y +_\phi x) \frac{\partial(y +_\phi x)}{\partial x} dx.\]  Restricting this equation to the origin by setting $x = 0$, we produce the condition \[f(0) = f(y) \cdot \left. \frac{\partial(y +_\phi x)}{\partial x} \right|_{x=0}.\]  The partial differential is a multiplicatively invertible power series, and hence we may rewrite $f(y)$ as \[f(y) = f(0) \cdot \left(\left. \frac{\partial(y +_\phi x)}{\partial x} \right|_{x=0}\right)^{-1}.\]  This shows that the assignment $f(y) \mapsto f(0)$ is bijective, establishing the desired isomorphism.
+We set out to analyze the space of invariant differentials in terms of a coordinate $x$.  As above, a differential $\omega$ admits expression as $\omega = f(x) \dx$, and the invariance condition above becomes \[f(x) \dx = f(y +_\phi x) \operatorname{d}(y +_\phi x) = f(y +_\phi x) \frac{\partial(y +_\phi x)}{\partial x} \dx.\]  Restricting this equation to the origin by setting $x = 0$, we produce the condition \[f(0) = f(y) \cdot \left. \frac{\partial(y +_\phi x)}{\partial x} \right|_{x=0}.\]  The partial differential is a multiplicatively invertible power series, and hence we may rewrite $f(y)$ as \[f(y) = f(0) \cdot \left(\left. \frac{\partial(y +_\phi x)}{\partial x} \right|_{x=0}\right)^{-1}.\]  This shows that the assignment $f(y) \mapsto f(0)$ is bijective, establishing the desired isomorphism.
 \end{proof}
 
 \begin{theorem}\label{RationalFGLsHaveLogarithms}
@@ -242,7 +242,7 @@ First, \Cref{InvDifflsAreDeterminedByConstantTerm} shows that a choice of sectio
 \end{proof}
 
 \begin{example}\label{GmAndItsLogExample}
-Consider the formal group law $x_1(t_1) +_{\G_m} x_2(t_2) = t_1 + t_2 - t_1 t_2$ studied in \Cref{CPinftyKUExample}.  Its associated rational logarithm is computed as \[\log_{\G_m}(t_2) = f(0) \cdot \int \frac{1}{1 - t_2} dt_2 = -f(0) \log(1 - t_2) = -f(0) \log(x_2),\] where ``$\log(x_2)$'' refers to Napier's classical natural logarithm of $x_2$.
+Consider the formal group law $x_1(t_1) +_{\G_m} x_2(t_2) = t_1 + t_2 - t_1 t_2$ studied in \Cref{CPinftyKUExample}.  Its associated rational logarithm is computed as \[\log_{\G_m}(t_2) = f(0) \cdot \int \frac{1}{1 - t_2} \operatorname{d\mathit{t}_2} = -f(0) \log(1 - t_2) = -f(0) \log(x_2),\] where ``$\log(x_2)$'' refers to Napier's classical natural logarithm of $x_2$.
 \end{example}
 
 
