title case for chapter titles

--- a/mo.tex
+++ b/mo.tex
@@ -1,6 +1,6 @@
 % -*- root: main.tex -*-
 
-\chapter{Unoriented bordism}\label{UnorientedBordismChapter}
+\chapter{Unoriented Bordism}\label{UnorientedBordismChapter}
 
 
 
