--- a/cooperations.tex
+++ b/cooperations.tex
@@ -1,6 +1,6 @@
 % -*- root: main.tex -*-
 
-\chapter{Unstable cooperations}\label{UnstableCooperationsChapter}
+\chapter{Unstable Cooperations}\label{UnstableCooperationsChapter}
 
 
 In \Cref{StableContextLecture} (and more broadly in \Cref{ChapterFiniteSpectra}), we codified the structure of the stable $E$--cooperations acting on the $E$--homology of a spectrum $X$, attached to it the $E$--Adams spectral sequence which approximates the stable homotopy groups $\pi_* X$, and gave algebro-geometric descriptions of the stable cooperations for some typical spectra: $\HFtwo$, $MO$, and $MU$.  We will now pursue a variation on this theme, where we consider the $E$--homology of a \emph{space} rather than of a generic spectrum.  In this Case Study, we will examine the theory of cooperations that arises from this set-up, called the \textit{unstable $E$--cooperations}.  This broader collection of cooperations has considerably more intricate structure than their stable counterparts, requiring the introduction of a new notion of an unstable context.  With that established, we will again find that $E$--homology assigns spaces to quasicoherent Cartesian sheaves over the unstable context, and we will again assemble an \emph{unstable} $E$--Adams spectral sequence approximating the \emph{unstable} homotopy groups of the input space, whose $E^2$--page in favorable situations is tracked by the cohomology of the sheaf over the unstable context.
